0.04
 [Common]
 - Add cleaning of Error::Pure errors.
 - Improve LICENSE AND COPYRIGHT sections in doc.
 - Improve SEE ALSO sections in doc.
 - Move author tests to xt/ directory.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

 [Tags::Output]
 - Add 'METHODS TO OVERWRITE' section to doc.

 [Tags::Output::Raw]
 - Fix 'no_simple' parameter in doc.
 - Remove TODOs from doc.

0.03 2014-11-10T06:54:17+01:00
 [Common]
 - Add minimal version of Perl.
 - Update Module::Install to 1.14 version.
 - Update LICENSE AND COPYRIGHT section in doc to my standard (bsd-2).

 [Tags::Output::Raw]
 - Fix SYNOPSIS in Tags::Output::Raw doc.

 [Tags::Utils::Preserve]
 - Improve tests.
 - Update ERRORS section in doc.
 - Update EXAMPLE section in doc.
 - Update SYNOPSIS section in doc.

0.02 2014-10-17T07:37:27+02:00
 - Fix test dependencies.

0.01 2014-10-13T13:33:17+02:00
 - First version.