@@ -6,7 +6,8 @@ use warnings;
 use English qw(-no_match_vars);
 use Error::Pure::Utils qw(clean);
 use Tags::Output::Raw;
-use Test::More 'tests' => 6;
+use Test::More 'tests' => 7;
+use Test::NoWarnings;
 
 # Test.
 eval {
