@@ -4,7 +4,8 @@ use warnings;
 
 # Modules.
 use Tags::Utils qw(encode_newline);
-use Test::More 'tests' => 1;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
 
 # Test.
 my $string = "text\ntext";
