@@ -1,6 +1,7 @@
 0.04
  [Common]
  - Add cleaning of Error::Pure errors.
+ - Add Test::NoWarnings to tests.
  - Improve LICENSE AND COPYRIGHT sections in doc.
  - Improve SEE ALSO sections in doc.
  - Move author tests to xt/ directory.
